# es-reddit-chat-data-demo

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/reddit/: reddit-threaded-Showerthoughts.ndjson  reddit-threaded-SkincareAddiction.ndjson  reddit-threaded-UpliftingNews.ndjson  reddit-threaded-WritingPrompts.ndjson  reddit-threaded-YouShouldKnow.ndjson  reddit-threaded-mildlyinteresting.ndjson  reddit-threaded-personalfinance.ndjson  reddit-threaded-philosophy.ndjson  reddit-threaded-podcasts.ndjson  reddit-threaded-programming.ndjson  reddit-threaded-relationship_advice.ndjson  reddit-threaded-science.ndjson  reddit-threaded-scifi.ndjson  reddit-threaded-socialskills.ndjson  reddit-threaded-space.ndjson  reddit-threaded-sports.ndjson  reddit-threaded-suggestmeabook.ndjson  reddit-threaded-technology.ndjson  reddit-threaded-tifu.ndjson  reddit-threaded-todayilearned.ndjson  reddit-threaded-travel.ndjson
elasticsearch/dashboards/: es-reddit-chat-demo-dashboard.ndjson
elasticsearch/indices/: demo-chatroom.data-reddit.json
elasticsearch/pipelines/: reddit-chat-data-pipeline.json
notebooks/: ingest_data_elasticsearch.ipynb
